<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        style="@style/Card"
        android:id="@+id/monthlyOverviewCard"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/space_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/calendarCurrentMonth"
                style="@style/Text_Paragraph_Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:text="November"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <!-- DAYS HEADER -->
            <LinearLayout
                android:id="@+id/daysHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@+id/calendarCurrentMonth"
                >
                <TextView
                    android:textSize="14sp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:gravity="center"
                    android:text="@string/monthly_overview_day_monday"
                    android:layout_marginStart="31dp"
                    />
                <TextView
                    android:textSize="14sp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:gravity="center"
                    android:text="@string/monthly_overview_day_tuesday"
                    android:layout_marginStart="65dp"
                    />
                <TextView
                    android:textSize="14sp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:gravity="center"
                    android:text="@string/monthly_overview_day_wednesday"
                    android:layout_marginStart="65dp"
                    />
                <TextView
                    android:textSize="14sp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:gravity="center"
                    android:text="@string/monthly_overview_day_thursday"
                    android:layout_marginStart="65dp"
                    />
                <TextView
                    android:textSize="14sp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:gravity="center"
                    android:text="@string/monthly_overview_day_friday"
                    android:layout_marginStart="65dp"
                    android:layout_marginEnd="16dp"
                    />
            </LinearLayout>

            <GridView
                android:id="@+id/monthlyOverviewGridview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numColumns="5"
                android:gravity="center"
                android:scrollbars="none"
                android:smoothScrollbar="false"
                android:overScrollMode="never"
                android:layout_marginHorizontal="@dimen/space_large"
                android:layout_marginBottom="@dimen/space_large"
                app:layout_constraintTop_toBottomOf="@id/daysHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>