<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:id="@+id/goalProgressCardWeeklyOverview"
    style="@style/Card"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/space_large">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <GridView
                android:id="@+id/gvWeeklyGoalsOverview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/weekly_statistics_gridview_space"
                android:numColumns="5"
                android:gravity="center"
                android:scrollbars="none"
                android:smoothScrollbar="false"
                android:overScrollMode="never"
                android:layout_marginHorizontal="@dimen/space_large"
                app:layout_constraintBottom_toTopOf="@id/daysHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <LinearLayout
                android:id="@+id/daysHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@+id/gvWeeklyGoalsOverview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly_overview_day_monday"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly_overview_day_tuesday"
                    android:layout_marginStart="62dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly_overview_day_wednesday"
                    android:layout_marginStart="65dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly_overview_day_thursday"
                    android:layout_marginStart="65dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly_overview_day_friday"
                    android:layout_marginStart="62dp"
                    android:layout_marginEnd="22dp"/>
            </LinearLayout>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/weeklyOffScreenTimeProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="50"
                app:trackThickness="12dp"
                app:indicatorColor="@color/blue_light"
                app:trackCornerRadius="25dp"
                style="@style/Widget.MaterialComponents.LinearProgressIndicator"
                android:indeterminate="false"
                android:minWidth="345dp"
                android:layout_marginTop="@dimen/space_large"
                app:layout_constraintTop_toBottomOf="@id/daysHeader"
                app:layout_constraintStart_toStartOf="@id/gvWeeklyGoalsOverview"
                app:layout_constraintEnd_toEndOf="@id/gvWeeklyGoalsOverview"
                />


<!--            <ProgressBar-->
<!--                android:id="@+id/weeklyOffScreenTimeProgressBar"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:scaleY="3"-->
<!--                style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
<!--                android:layout_marginTop="@dimen/space_large"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/daysHeader"-->
<!--                app:layout_constraintStart_toStartOf="@id/gvWeeklyGoalsOverview"-->
<!--                app:layout_constraintEnd_toEndOf="@id/gvWeeklyGoalsOverview" />-->

            <TextView
                android:id="@+id/weeklyOffScreenProgressTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="@dimen/space_large"
                android:text="@string/weekly_goals_overview_text"
                android:paddingHorizontal="@dimen/day_header_spacing"
                app:layout_constraintTop_toBottomOf="@+id/weeklyOffScreenTimeProgressBar"
                app:layout_constraintStart_toStartOf="@id/gvWeeklyGoalsOverview"
                app:layout_constraintEnd_toEndOf="@id/gvWeeklyGoalsOverview"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Text_Subtitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
